--- a/package.json
+++ b/package.json
@@ -5,11 +5,22 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "server": "json-server server.json -w -d 750 -p 3333"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "date-fns": "^2.25.0",
     "next": "10.1.3",
+    "rc-slider": "^9.7.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.43.4"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.35",
+    "json-server": "^0.17.0",
+    "typescript": "^4.4.4"
   }
 }
